SFDC Automation/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Frequency_of_Rental__c</fullName>
        <description>Description of any potential rental seasonality for this customer</description>
        <label>Frequency of Rental</label>
        <picklist>
            <picklistValues>
                <fullName>Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1sr quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valentines Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th of July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother&apos;s Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thanksgiving</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GROWTH_ACC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Growth Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Decentralized_Opps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to allow sales people to get the automatic generation of renewal opportunities with a decentralized logic, regardless of what the formal flag indicates</description>
        <inlineHelpText>Check this box if you want renewal opportunities to be generated as decentralized, even if you have set the account as centralized decision making. Use it if you want to maintain control of opportunity creation.</inlineHelpText>
        <label>Generate Decentralized Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <description>Global Ultimate DUNS NUmber</description>
        <label>Global Ultimate DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Status_Percent__c</fullName>
        <description>Display the % of Customer/Branches with Growth  risk status</description>
        <formula>IF(AND(RiskStatusGrowth__c != 0, RiskStatusCBCount__c != 0), RiskStatusGrowth__c  /  RiskStatusCBCount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth Status %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guarantor_Address_City__c</fullName>
        <description>Used for Credit to View Legal Address / Update Legal Address</description>
        <label>Guarantor Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Address_Country__c</fullName>
        <description>Mapped from Legal Entity Address</description>
        <label>Guarantor Address Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Address_State_Province__c</fullName>
        <description>Mapped From Legal Entity Address State/Province</description>
        <label>Guarantor Address State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Address_Street__c</fullName>
        <description>Mapped from Legal Entity Address Street</description>
        <label>Guarantor Address Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Address_Zip_Postal_Code__c</fullName>
        <description>Mapped from Legal Entity Address Zip/Postal Code</description>
        <label>Guarantor Address Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Name__c</fullName>
        <label>Guarantor Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to be used only on Existing Account Finder page</description>
        <inlineHelpText>This field is created to be used only on Existing Account Finder page</inlineHelpText>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOC_ID__c</fullName>
        <description>Needed for migration purposes.</description>
        <label>Location ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Fixed_Cost__c</fullName>
        <label>Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Rated_Cost__c</fullName>
        <label>Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_Months_Revenue__c</fullName>
        <label>Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_months_FSL_revenue__c</fullName>
        <label>FSL - Last 12 months revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_12_months_RPM_revenue__c</fullName>
        <label>RPM - Last 12 Months - Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Customer_Touch__c</fullName>
        <formula>IF( AND ( LastActivityDate &lt; TODAY(), LastActivityDate &gt; DATEVALUE (LastModifiedDate) ) , LastActivityDate , DATEVALUE (LastModifiedDate) )</formula>
        <label>Last Customer Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Face_to_Face_Activity_Date__c</fullName>
        <label>Last Face to Face Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Sales_Interaction__c</fullName>
        <description>Last Sales Interaction</description>
        <label>Last Sales Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <description>This field holds the comment of the latest Activity of Type = &apos;Account/Opportunity Update&apos; on Account which is created by Account Owner, NCA or SAC.</description>
        <inlineHelpText>This field holds the comment of the latest Activity of Type = &apos;Account/Opportunity Update&apos; on Account which is created by Account Owner, NCA or SAC.</inlineHelpText>
        <label>Latest Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_Date__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_Id__c</fullName>
        <label>Legacy Owner Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address_City__c</fullName>
        <label>Legal Entity Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address_Country__c</fullName>
        <label>Legal Entity Address Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address_State_Province__c</fullName>
        <label>Legal Entity Address State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address_Street__c</fullName>
        <label>Legal Entity Address Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Address_Zip_Postal_Code__c</fullName>
        <label>Legal Entity Address Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Equifax_No__c</fullName>
        <label>Legal Equifax No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Site_Duns__c</fullName>
        <description>Shadow Field for integration to Radar - Can be editable by Admins and Credit</description>
        <label>Legal Site Duns #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LesseeNo_Dup_Backup__c</fullName>
        <description>As we cleanup duplicate lessee no from former customers, use this field to store old lessee no as a backup field for future cleanup</description>
        <inlineHelpText>use this field to store old lessee no as a backup field for future cleanup</inlineHelpText>
        <label>Lessee No Duplicate Backup</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LesseeNo__c</fullName>
        <description>Realtime update of both SFDC and RADAR whenever this value is changed in either system</description>
        <label>Lessee Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Fixed_Cost__c</fullName>
        <label>Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Rated_Cost__c</fullName>
        <label>Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_to_Date_Revenue__c</fullName>
        <label>Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Confidence__c</fullName>
        <description>The degree of confidence that the response matches the information that&apos;s provided in the request. The default confidence level is 8. The confidence level can be set to between 1 and 10</description>
        <label>Match Confidence</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Grade__c</fullName>
        <description>Represents the quality of the data for the D&amp;B fields in the matched record

Added for QC630 Change lead conversion process to use DUNSRIGHT API for matching and restore restricted functionality to create account without match</description>
        <label>Match Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_DNB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag an account that was created/converted without selecting a D&amp;B Match or existing Account</description>
        <label>Missing DNB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NATL_RNTL_CUST_ID__c</fullName>
        <description>National Rental Customer Account ID. Pulled from FIS</description>
        <label>National Rental #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That person does not have an NCA profile</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>NCA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsForNCA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NIAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NIAM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>National Inside Account Manager</value>
            </filterItems>
            <infoMessage>Please enter name of user in the NIAM role assigned to the National account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>NIAM_for_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NationalCustFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Customer Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Rental_Application_Stage__c</fullName>
        <description>Where is the prospect account in terms of their National Rental Application process</description>
        <inlineHelpText>Select the stage of the National Rental Application process</inlineHelpText>
        <label>National Rental Application Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Signed Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined - Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance - COI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance - Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtain Authorized List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ammendments / Hazmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verifying Customer Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Setup - Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nearest_Branch__c</fullName>
        <label>Nearest Ryder branch</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Status_Percent__c</fullName>
        <formula>IF(AND(RiskStatusNoStatus__c != 0, RiskStatusCBCount__c != 0), RiskStatusNoStatus__c / RiskStatusCBCount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Status %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Key_Account_Capture_Date__c</fullName>
        <label>Non Key Account Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Designations__c</fullName>
        <description>To store any other designation that we want to give the account. We had a couple of fields for individual designations and more needed to be created so we did this as a cleaner way to show it</description>
        <inlineHelpText>Indicate which other classifications or designations are pertinent to this account</inlineHelpText>
        <label>Other Designations</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Tag Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MWBE (Minority Owned)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Instructions__c</fullName>
        <inlineHelpText>Please specify Subs for PM&apos;s</inlineHelpText>
        <label>Other Instructions</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Misc_Billing_Information__c</fullName>
        <inlineHelpText>This information will not be displayed in SHOP.</inlineHelpText>
        <label>Other Misc. Billing Information</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerRegion__c</fullName>
        <label>OwnerRegion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Copy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountOwnerCopy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_NUMBER__c</fullName>
        <description>PO Number</description>
        <label>PO Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pager__c</fullName>
        <label>Pager</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ParentAccountStatus__c</fullName>
        <formula>if( ISPICKVAL(Parent.Type, &apos;&apos;), text(Type), text(Parent.Type))</formula>
        <label>Parent Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Classification__c</fullName>
        <formula>if( ISPICKVAL(Parent.Account_Classification__c, &apos;&apos;), text(Account_Classification__c ), text(Parent.Account_Classification__c))</formula>
        <label>Parent Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Owner__c</fullName>
        <formula>IF( BLANKVALUE(Parent.Owner.LastName,&apos;&apos;)=&apos;&apos;, HYPERLINK(&apos;/&apos;+Owner.Id, Owner.FirstName+&apos; &apos;+Owner.LastName ),  HYPERLINK(&apos;/&apos;+Parent.Owner.Id, Parent.Owner.FirstName+&apos; &apos;+Parent.Owner.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Fleet_Ownership_type__c</fullName>
        <formula>IF( BLANKVALUE(Text(Parent.Fleet_Ownership_Type__c),&apos;&apos;)=&apos;&apos;, Text(Fleet_Ownership_Type__c), Text(Parent.Fleet_Ownership_Type__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Fleet Ownership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <description>Secondary Account Phone number</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Polk_total_class_3_8__c</fullName>
        <label>Polk total class 3-8</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostalCode_No_Plus_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PostalCode No Plus 4</label>
        <referenceTo>Postal_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue__c</fullName>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospecting_Status__c</fullName>
        <label>Prospecting Status</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Actively Pursuing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Actively Pursuing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Never Pursue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Fixed_Cost_Perc__c</fullName>
        <label>RPM - Last 12 Months - Fixed Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Fixed_Cost__c</fullName>
        <label>RPM - Last 12 Months - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Margin_Perc__c</fullName>
        <label>RPM - Last 12 Months - Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Margin__c</fullName>
        <label>RPM - Last 12 Months - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Rated_Cost_Perc__c</fullName>
        <label>RPM - Last 12 Months - Rated Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Rated_Cost__c</fullName>
        <label>RPM - Last 12 Months - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Last_12_Months_Revenue__c</fullName>
        <label>RPM - Last 12 Months - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Fixed_Cost_Perc__c</fullName>
        <label>RPM - Life to Date - Fixed Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Fixed_Cost__c</fullName>
        <label>RPM - Life to Date - Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Margin_Perc__c</fullName>
        <label>RPM - Life to Date - Margin%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Margin__c</fullName>
        <label>RPM - Life to Date - Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Rated_Cost_Perc__c</fullName>
        <label>RPM - Life to Date - Rated Cost%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Rated_Cost__c</fullName>
        <label>RPM - Life to Date - Rated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPM_Life_to_Date_Revenue__c</fullName>
        <label>RPM - Life to Date - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_AC_Classification__c</fullName>
        <description>RydeSmart Account Classification</description>
        <inlineHelpText>If RS Account Classification is changed manually then Check &quot;Do Not Override AC&quot; field.</inlineHelpText>
        <label>RydeSmart Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Key Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Key Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Account_Status_Update_Date__c</fullName>
        <label>RSM Account Status Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSM_Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_CCM_manual_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if the CCM is Manually Updated</description>
        <label>Do Not Override CCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_CCMs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to Store RydeSmart&apos;s CCM (Customer Care Manager) owner</description>
        <inlineHelpText>If CCM is changed Manually then check &quot;Do Not Override CCM&quot; field.</inlineHelpText>
        <label>CCM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSM_Competitor__c</fullName>
        <description>Field to store RydeSmart Competitor information</description>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Blue Tree Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyntrx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleetmatics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JJ Keller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Omnitracs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orbcomm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rand McNally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skybitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teletrac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telogis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Tom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trimble/PeopleNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zonar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RSM_Manual_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if RydeSmart Account is Manually Updated</description>
        <label>Do Not Override RC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Onboarding__c</fullName>
        <description>Field to Store onboarding status of rydesmart account</description>
        <label>Onboarding</label>
        <picklist>
            <picklistValues>
                <fullName>Initiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted and Training Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSM_PLC_FLag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSM PLC FLag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM_Plus1_Total_Unit__c</fullName>
        <label>Plus1 Total Unit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Plus_Total_Unit__c</fullName>
        <label>Plus Total Unit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Revenue__c</fullName>
        <description>Field to display associated RydeSmart revenue of Account</description>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSM_STD_Total_Unit__c</fullName>
        <label>STD Total Unit</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to buypass Onboarding validation rule when RSMUpdateOnboardingStatus trigger fires</description>
        <label>bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RYDER_LOC_TYPE__c</fullName>
        <label>Ryder Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing/Assembly Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary Undefined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rated_FSL_revenue__c</fullName>
        <label>Rated FSL revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rated_RPM_revenue__c</fullName>
        <label>Rated RPM revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remianing_Revenue__c</fullName>
        <label>Remaining Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity_Start_Date__c</fullName>
        <description>Allows to skip units for which opportunities may already exist, minimizing the risk of duplicate opportunities</description>
        <inlineHelpText>To be used the first time we are automatically generating renewal opportunities. Please indicate from which we should look for expiring units. Units expiring before this date will be ignored in the first generation process.</inlineHelpText>
        <label>Renewal Opportunity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <description>What is the frequency of opportunities we need to create when automatically generating renewal opportunities</description>
        <inlineHelpText>To be used for automatic generation of renewal opportunities. Indicate if we should create opportunities to cover expiring units by months, quarters, half-years or full-years</inlineHelpText>
        <label>Renewal Opportunity Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Generate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>